--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,16 @@
   </properties>
   
 <distributionManagement>
-       <repository>
-         <id>internal.repo</id>
-         <name>Internal repo</name>
-         <url>file:///var/lib/jenkins/myartifacts/</url>
-       </repository>
+  <repository>
+    <id>releases</id>
+    <!-- CHANGE HERE by your team nexus server -->
+    <url>http://34.238.121.203:8081/repository/maven-releases/</url>
+  </repository>
+  <snapshotRepository>
+    <id>snapshots</id>
+    <!-- CHANGE HERE by your team nexus server -->
+    <url>http://34.238.121.203:8081/repository/maven-snapshots/</url>
+  </snapshotRepository>
 </distributionManagement>
 
   <dependencies>
